syntax = "proto2";
package rpc;
option go_package = "initialthree/protocol/ss/rpc";

message echo_req {
	required string message = 1;
	optional int64  seqno   = 2;
}

message echo_resp {
	required string message = 1;
	optional int64  seqno   = 2;	
}