syntax = "proto2";
package rpc;
option go_package = "initialthree/protocol/ss/rpc";

message teamGetNearPlayer_req {}

message teamGetNearPlayer_resp {}
