syntax = "proto2";
package ssmessage;
option go_package = "initialthree/protocol/ss/ssmessage";

message kickGameUser {
    required string userID = 1;
}
