syntax = "proto2";
package ssmessage;
option go_package = "initialthree/protocol/ss/ssmessage";

message kickIPGate {
    repeated string regexpIPs = 1; // ip,支持通配符
}