syntax = "proto2";
package ssmessage;
option go_package = "initialthree/protocol/ss/ssmessage";

message rankEnd {
    optional int32 rankID = 1;
}