syntax = "proto2";
package ssmessage;
option go_package = "initialthree/protocol/ss/ssmessage";

message userLoginToDir {
    optional string userID = 1;
    optional int32  areaID = 2;
}
